--- a/pages/StarshipList/StarshipList.css
+++ b/pages/StarshipList/StarshipList.css
@@ -3,11 +3,16 @@
   height: 100px;
   background-color: lightblue;
   margin: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  
 }
 
 .starship-list {
   display: flex;
+}
+
+.starship-details {
+  background-color: lightblue;
+  border-radius: 5px;
 }
